--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -6,8 +6,11 @@
     "target": "es2022",
     "strict": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
     "moduleResolution": "node16",
     "outDir": "dist"
   }
 }
+
+
