feat: Complete testnet deployment, verification, and frontend integration
- Deploy L1 and L2 contracts on Ethereum Sepolia and Base Sepolia
- Verify contracts on Etherscan, Basescan, Blockscout, and Sourcify
- Improve smoke test with extended timeouts and messageId verification
- Add comprehensive deployment documentation (DEPLOYMENT.md)
- Add session changelog (CHANGELOG_SESSION.md)
- Update testing report with smoke test results
- Update project status (Phase 3-5 completed, Phase 6 at 70%)
- Set up automated frontend integration (ABI and address copying)
- Add helper scripts (check-status, fund-l1-receiver-eth)
- Update package.json with compile and postcompile scripts

Contract Addresses:
- L1: 0x2718a6057cE3d0a57a219Abe21612eD104457f7C
- L2: 0x411947c4C08E0583A84E58d48f108c136978c11D

Test Results:
- Smoke test passed successfully
- L2->L1 message flow verified
- L1 record creation verified
- L1->L2 ACK flow verified

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "compile": "hardhat compile",
+    "postcompile": "node scripts/copy-contract-info.cjs",
+    "build": "npm run compile",
     "coverage": "hardhat coverage --config hardhat.coverage.config.ts"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^4.0.3",
     "@nomicfoundation/hardhat-ignition": "^3.0.6",
     "@nomicfoundation/hardhat-toolbox-mocha-ethers": "^3.0.2",
+    "@nomicfoundation/hardhat-verify": "^3.0.8",
     "@types/chai": "^4.3.20",
     "@types/chai-as-promised": "^8.0.2",
     "@types/mocha": "^10.0.10",
